--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   position: absolute;
   top:0;
   width:100%;
-  height: 100%;
+  height: auto;
   min-height: 100%;
   margin: 0 auto;
 
   text-align: center;
-  background: red;
+  background: rgb(111, 185, 214);
 }
 
 .logo {
