--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,5 +1,11 @@
 .hero{
     width:100%;
-    height:93%;
-    background:rgb(45, 100, 92)
+    height:100%;
+    background:rgb(45, 100, 92);
+    display:grid;
+    grid-template-columns: 5fr 2fr;
+}
+.hero-img{
+    background: orange;
+    margin:5px;
 }
