--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,9 +1,10 @@
 .hero{
     width:100%;
-    height:100%;
+    height:88vh;
     background:rgb(45, 100, 92);
     display:grid;
     grid-template-columns: 5fr 2fr;
+    grid-template-rows: 1fr;
 }
 .hero-img{
     background: orange;
