--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,22 +2,23 @@
     position:relative;
     background: rgb(59, 55, 55);
     display:grid;
-    min-height:20vh;
+    min-height:35vh;
     grid-template-rows: 5fr 1fr;
     margin: 1px;
     padding: 0;
 }
 .card-img{
  
-    background:black;
+    background: rgb(136, 190, 172);
     position: absolute;
     top:0;
     left:0;
     margin: 0;
     padding:0;
-  
     width: 100%;
-    
+   
+    max-height: 40vh;
+    object-fit: cover;
 
 }
 .card-p{
