--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -19,3 +19,9 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     
 }
+.nav-login{
+    background: greenyellow;
+    max-width:15vw;
+    max-height: 10vh;
+    size: 10px;
+}
