--- a/src/routes/ListOverview/ListOverview.css
+++ b/src/routes/ListOverview/ListOverview.css
@@ -1,5 +1,8 @@
 .list-overview{
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    display: grid;
+   
+    grid-template-columns: repeat(3, minmax(20vw, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(20vh, 1fr));
+    
+    
 }
