--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,12 +1,50 @@
 .hero{
     width:100%;
-    height:88vh;
-    background:rgb(45, 100, 92);
+    height:90vh;
+    background:none;
+    margin: 5px;
     display:grid;
-    grid-template-columns: 5fr 2fr;
+    grid-template-columns: 3fr 2fr;
     grid-template-rows: 1fr;
+    justify-content: flex-start;
+    text-align: left;
 }
 .hero-img{
-    background: orange;
+    background: none;
     margin:5px;
+   
+    width:50vw;
+  
+    justify-content: baseline;
+    position: absolute;
+    left:0;
+    
 }
+.hero-text{
+    color: #000000;
+    width:50vw;
+    background:none;
+    margin: 5px;
+    
+
+}
+.typewriter {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    opacity: 0;
+    animation: typing 3.5s steps(40, end) forwards, blink-caret .5s step-end infinite;
+  }
+  
+  @keyframes typing {
+    from {opacity: 0; width: 0 }
+    to {opacity: 1; width: 100% }
+  }
+  
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
+  
