--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Space Mono', monospace;
   line-height: 1.5;
   font-weight: 400;
   height: 100%;
@@ -12,11 +12,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+
+  color: #ffffff;
   text-decoration: inherit;
 }
 a:hover {
