--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
     justify-content: left;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: left;
     align-items: center;
     overflow: hidden;
     z-index: 100;
@@ -17,16 +17,40 @@
 
 }
 
+.nav-v {
+    position: absolute;
+    flex-direction: column;
+    min-height: 99vh;
+    background: #000000;
+    color: white;
+    width: 100vw;
+    top: 0;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 1000;
+}
+
+.menu {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 80vw;
+    background: none;
+}
+
 .avatar {
-    max-width: 50px;
+    max-width: 60px;
+    margin: 3vw;
 
 }
 
 .login {
 
-    max-width: 10vw;
+    max-width: 8vw;
     max-height: 7vh;
-
+    margin: 5px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -38,29 +62,56 @@
 input {
     min-width: 7vw;
     height: 6vh;
+    margin-left: 10px;
+    background-color: #000000;
+    color: white;
+    size: 1rem;
+    border: white solid 2px;
+    border-radius: 5%;
+}
+
+.menu-img {
+    width: 50px;
+}
+
+.login-btn {
+    background-color: black;
     margin: 5px;
+    color: white;
+
+
+}
+
+.login-btn:hover {
+    background-color: white;
+    color: black
 }
 
 @media screen and (max-width: 900px) {
-    .nav {
+
+    .menu {
         position: absolute;
         flex-direction: column;
-        min-height: 99vh;
+        min-height: 82vh;
+        width: 100vw;
     }
 
     .avatar {
-        max-width: 10vw;
+        max-width: 8vw;
         min-width: 60px;
     }
 
     .toggle {
-        background: none;
+        background-color: none;
+        color: white;
         position: absolute;
         right: 0;
         top: 0;
-        margin: 5vw;
-        max-width: 10vw;
-        max-height: 10vh;
+        margin: 5px;
+        min-width: 50px;
+        width: 50px;
+
+
     }
 
     .login {
