--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .hero {
   width: 100%;
   height: 90vh;
@@ -69,61 +68,37 @@
     border-color: none
   }
 }
-=======
-.hero{
-    width:100%;
-    height:90vh;
-    background:none;
-    margin: 5px;
-    display:grid;
-    grid-template-columns: 3fr 2fr;
-    grid-template-rows: 1fr;
-    justify-content: flex-start;
-    text-align: left;
-}
-.hero-img{
+
+@media screen and (max-width: 900px) {
+
+  .hero {
+    width: 100%;
+    height: 170vh;
+
     background: none;
-    margin:5px;
-   
-    width:35vw;
-  
-    justify-content: baseline;
-    position: absolute;
-    left:0;
-    top:100px
-    
-}
-.hero-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
+    align-items: center;
+  }
+
+  .hero-img {
+    background: none;
+    margin-bottom: 100px;
+    width: 95vw;
+
+  }
+
+  .hero-text {
     color: #000000;
-    width:50vw;
-    background:none;
+    height: 100vh;
+    width: 100vw;
+    font-size: 1.2rem;
     margin: 5px;
-   
-   
+  }
 
+  .typewriter {
+    font-size: 1rem;
+  }
 }
-.typewriter {
-    overflow: hidden;
-    border-right: .15em solid orange;
-    white-space: nowrap;
-    margin: 0 ;
-    letter-spacing: .15em;
-    opacity: 0;
-    width: auto;
-    animation: typing 2.5s steps(40, end) forwards, blink-caret .5s step-end infinite;
-  }
-  
-  @keyframes typing {
-    from {opacity: 0; width: 0 }
-    to {opacity: 1; width: 100% }
-  }
-  
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color:none}
-  }
-  
-  
-
-  
->>>>>>> 89d6d93dc339359dac1cdd0c06145a4c98440a7e
