--- a/src/components/Bubble/Bubble.css
+++ b/src/components/Bubble/Bubble.css
@@ -1,28 +1,39 @@
 .bubble {
-    position: relative;
-    display: inline-block;
-    border-radius: 15%;
-    border:3px solid black;
-    background-color:none;
-    width:8vw;
-    margin: 5px;
-    aspect-ratio: 1/1;
-    justify-content: center;
-  }
-  .bubble-img{
-    max-width:7vw;
-    margin: 5px;
-  }
-  .badge {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    background-color: red;
-    color: white;
-    height: 30px;
-    width: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-  }
+  position: relative;
+
+  border-radius: 15%;
+  border: 3px solid black;
+  background-color: none;
+  width: 12vw;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  aspect-ratio: 1/1;
+  justify-content: center;
+
+
+}
+
+.bubble-img {
+  max-width: 10vw;
+  margin: 5px;
+}
+
+.badge {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  color: white;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+:hover.bubble {
+  width: 15vw;
+  margin: 1vw;
+  background: orangered;
+}
