--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,13 +1,14 @@
 .hero {
-  width: 100%;
+  width: 100vw;
   height: 90vh;
   background: none;
   margin: 5px;
-  display: grid;
-  grid-template-columns: 3fr 2fr;
-  grid-template-rows: 1fr;
-  justify-content: flex-start;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: start;
   text-align: left;
+
 
 }
 
@@ -15,33 +16,29 @@
   background: none;
   margin-top: 12vh;
   margin-bottom: 12vh;
-  width: 35vw;
+  width: 45vw;
   border: none;
   justify-content: baseline;
-  position: absolute;
-  left: 0;
-  top: 8vh
+
 }
 
 .hero-text {
   color: #000000;
-  width: 50vw;
+  width: 55vw;
   background: none;
-  margin: 5px;
-
-
+  margin: 0;
 
 }
 
 .typewriter {
   overflow: hidden;
-  border-right: .15em solid orange;
+  border-right: 2px solid rgb(255, 28, 28);
   white-space: nowrap;
   margin: 0;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   letter-spacing: .15em;
   opacity: 0;
-  width: auto;
+  font-size: 1rem;
   animation: typing 1.5s steps(40, end) forwards, blink-caret .5s step-end infinite;
 }
 
@@ -53,7 +50,7 @@
 
   to {
     opacity: 1;
-    width: 100%
+    width: 55vw
   }
 }
 
@@ -73,32 +70,52 @@
 
   .hero {
     width: 100%;
-    height: 170vh;
+    height: auto;
 
     background: none;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    text-align: left;
+    justify-content: flex-start;
+    text-align: center;
     align-items: center;
   }
 
   .hero-img {
     background: none;
-    margin-bottom: 100px;
-    width: 95vw;
+    position: relative;
+    margin-bottom: 0;
+    margin-top: 0;
+    max-width: 50vw;
 
   }
 
   .hero-text {
     color: #000000;
-    height: 100vh;
     width: 100vw;
-    font-size: 1.2rem;
-    margin: 5px;
+    font-size: 1em;
+    margin-top: 0;
+    margin-bottom: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
 
   .typewriter {
-    font-size: 1rem;
+    font-size: 0.9em;
+    width: 99vw;
   }
+
+  @keyframes typing {
+    from {
+      opacity: 1;
+      width: 0
+    }
+
+    to {
+      opacity: 1;
+      width: 95vw
+    }
+  }
+
 }
