--- a/src/components/Strip/Strip.css
+++ b/src/components/Strip/Strip.css
@@ -12,6 +12,7 @@
 
 .strip-rail {
     width: 70vw;
+    min-height: 60vh;
 
     background: none;
     display: flex;
@@ -19,5 +20,5 @@
     justify-content: space-between;
     align-items: center;
     overflow-x: hidden;
-    margin: 2vw;
+    margin: 0.2vw;
 }
