--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,131 +1,118 @@
 .nav {
-    height: 12vh;
-    width: 100%;
-    border-bottom: 3px black solid;
-    position: fixed;
-    top: 0;
-    background: rgb(0, 0, 0);
-    color: white;
-    justify-content: left;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    align-items: center;
-    overflow: hidden;
-    z-index: 100;
-
-
+  height: 12vh;
+  width: 100%;
+  border-bottom: 3px black solid;
+  position: fixed;
+  top: 0;
+  background: rgb(0, 0, 0);
+  color: white;
+  justify-content: left;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  overflow: hidden;
+  z-index: 100;
 }
 
 .nav-v {
-    position: absolute;
-    flex-direction: column;
-    min-height: 99vh;
-    background: #000000;
-    color: white;
-    width: 100vw;
-    top: 0;
-    justify-content: space-evenly;
-    align-items: center;
-    z-index: 1000;
+  position: absolute;
+  flex-direction: column;
+  min-height: 99vh;
+  background: #000000;
+  color: white;
+  width: 100vw;
+  top: 0;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 1000;
 }
 
 .menu {
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 80vw;
-    background: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 80vw;
+  background: none;
 }
 
 .avatar {
-    max-width: 60px;
-    margin: 3vw;
-
+  max-width: 60px;
+  margin: 3vw;
 }
 
 .login {
-
-    max-width: 8vw;
-    max-height: 7vh;
-    margin: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-
+  max-width: 8vw;
+  max-height: 7vh;
+  margin: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 input {
-    min-width: 7vw;
-    height: 6vh;
-    margin-left: 10px;
-    background-color: #000000;
-    color: white;
-    size: 1rem;
-    border: white solid 2px;
-    border-radius: 5%;
+  min-width: 7vw;
+  height: 6vh;
+  margin-left: 10px;
+  background-color: #000000;
+  color: white;
+  size: 1rem;
+  border: white solid 2px;
+  border-radius: 5%;
 }
 
 .menu-img {
-    width: 50px;
+  width: 50px;
 }
 
 .login-btn {
-    background-color: black;
-    margin: 5px;
-    color: white;
-
-
+  background-color: black;
+  margin: 5px;
+  color: white;
 }
 
 .login-btn:hover {
-    background-color: white;
-    color: black
+  background-color: white;
+  color: black;
 }
 
 @media screen and (max-width: 900px) {
+  .menu {
+    position: absolute;
+    flex-direction: column;
+    min-height: 82vh;
+    width: 100vw;
+  }
 
-    .menu {
-        position: absolute;
-        flex-direction: column;
-        min-height: 82vh;
-        width: 100vw;
-    }
+  .avatar {
+    max-width: 8vw;
+    min-width: 60px;
+  }
 
-    .avatar {
-        max-width: 8vw;
-        min-width: 60px;
-    }
+  .toggle {
+    background-color: none;
+    color: white;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 5px;
+    min-width: 50px;
+    width: 50px;
+  }
 
-    .toggle {
-        background-color: none;
-        color: white;
-        position: absolute;
-        right: 0;
-        top: 0;
-        margin: 5px;
-        min-width: 50px;
-        width: 50px;
+  .login {
+    max-width: 80vw;
+    height: 10vh;
+    margin-top: 2vh;
+    flex-direction: column;
+  }
 
-
-    }
-
-    .login {
-        max-width: 80vw;
-        height: 10vh;
-        margin-top: 2vh;
-        flex-direction: column;
-    }
-
-    input {
-        min-width: 15vw;
-        min-height: 4vh;
-        margin-bottom: 2vh;
-        justify-content: space-around;
-    }
-
+  input {
+    min-width: 15vw;
+    min-height: 4vh;
+    margin-bottom: 2vh;
+    justify-content: space-around;
+  }
 }
