--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
   line-height: 1.5;
   font-weight: 400;
   height: 100%;
   min-height: 100%;
 
-
-
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
 }
 
 a {
-
   color: #ffffff;
   text-decoration: inherit;
 }
