--- a/src/routes/Home/Home.css
+++ b/src/routes/Home/Home.css
@@ -1,38 +1,30 @@
 .home {
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .home-intro {
-
   margin-top: 12vh;
   display: grid;
-
-
 }
 
 .home-strips {
-
   border-top: black dotted 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
 
 .home-list-overview {
-
   display: flex;
   flex-direction: column;
-
 }
 
 .home-footer {
   display: grid;
   grid-template-columns: 4fr 1fr;
-
 }
 
 li {
